fix(edge): support high contrast mode active

--- a/core/_platform.scss
+++ b/core/_platform.scss
@@ -18,7 +18,7 @@
 
 // Browser specific mixins
 @mixin mdw-platform__ie {
-  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  @media all\0 {
     @content;
   }
 }
